Implement the Tunnel device and startup scripts

--- a/control/client/SConscript
+++ b/control/client/SConscript
@@ -17,18 +17,10 @@
 
 import os
 
-# Define the command-line options for the build
+Import('control_env')
+env = control_env.Clone()
 
-# --client_target
-client_targets = {
-    'pi': 'arm-linux-gnueabihf-',
-    'pc': '',
-}
-AddOption('--client_target', dest='client_target', type='choice',
-          choices=list(client_targets.keys()), default='pc',
-          help='Use CLIENT_TARGET as the architecture for the client')
-
-env = Environment(ENV=os.environ, CLIENT_COMPILER_PREFIX=client_targets[GetOption('client_target')])
-
-SConscript('native/SConscript', exports='env', variant_dir='build/native', duplicate=0)
-SConscript('control/SConscript', exports='env', variant_dir='build/control', duplicate=0)
+Command(os.path.join(Dir('#').abspath, 'install/client/start.py'), 'start.py',
+        Copy('$TARGET', '$SOURCE'))
+Command(os.path.join(Dir('#').abspath, 'install/client/client.cfg'), 'default_client_config.cfg',
+        Copy('$TARGET', '$SOURCE'))
