Make the `common` library also build for the same platform

--- a/native/common/SConscript
+++ b/native/common/SConscript
@@ -19,4 +19,10 @@ Import('native_env')
 env = native_env.Clone()
 env.Append(CPPPATH=[Dir('../boost_for_client/include')])
 
+# Change the compiler/liker to match the target architecture
+for (tool, name) in [
+    ('CXX', 'g++'),
+]:
+    env[tool] = env['CLIENT_COMPILER_PREFIX'] + name
+
 env.Library('common', ['exception.cpp'])
