--- a/native/SConscript
+++ b/native/SConscript
@@ -17,7 +17,7 @@
 
 Import('env')
 native_env = env.Clone()
-native_env.Append(CPPPATH=[Dir('.').abspath], LIBPATH=[Dir('.').abspath])
+native_env.Append(CPPPATH=[Dir('.').abspath], LIBPATH=[Dir('.').abspath], CXXFLAGS=['-std=c++14'])
 
 # Target for Boost (which is shared between the client and server)
 native_env.Command(
