--- a/control/client/SConscript
+++ b/control/client/SConscript
@@ -20,7 +20,7 @@ import os
 Import('control_env')
 env = control_env.Clone()
 
-Command(os.path.join(Dir('#').abspath, 'install/client/start.py'), 'start.py',
-        Copy('$TARGET', '$SOURCE'))
-Command(os.path.join(Dir('#').abspath, 'install/client/client.cfg'), 'default_client_config.cfg',
-        Copy('$TARGET', '$SOURCE'))
+env.Command(os.path.join(Dir('#').abspath, 'install/client/start.py'), 'start.py',
+            Copy('$TARGET', '$SOURCE'))
+env.Command(os.path.join(Dir('#').abspath, 'install/client/client.cfg'),
+            'default_client_config.cfg', Copy('$TARGET', '$SOURCE'))
