--- a/native/client/SConscript
+++ b/native/client/SConscript
@@ -17,21 +17,14 @@
 
 import os
 
-Import('native_env')
-env = native_env.Clone()
-env.Append(LIBPATH=[Dir('../boost_for_client/lib'), Dir('../common')])
-env.Append(CPPPATH=[Dir('../boost_for_client/include'), Dir('../common')])
+Import('env')
 
-# Change the compiler/liker to match the target architecture
-for (tool, name) in [
-    ('CXX', 'g++'),
-]:
-    env[tool] = env['CLIENT_COMPILER_PREFIX'] + name
-
-# Compile the Raspberry Pi client
-client = env.Program(target='client', source=[
-    'client_main.cpp',
-    'context.cpp',
-    'tun_ctl.cpp',
-], LIBS=['boost_program_options', 'common', 'pthread'])
+client = env.Program(
+    target='client',
+    source=[
+        'client_main.cpp',
+        'context.cpp',
+        'tun_ctl.cpp',
+    ],
+)
 env.Install(os.path.join(Dir('#').abspath, 'install/client'), [client])
