Add parsing and printing for common IP protocols

--- a/native/common/SConscript
+++ b/native/common/SConscript
@@ -21,6 +21,7 @@ common = env.Library(
     target='common',
     source=[
         'exception.cpp',
+        'ip_parsers.cpp',
     ],
 )
 Return('common')
