--- a/native/server/SConscript
+++ b/native/server/SConscript
@@ -27,3 +27,10 @@ server = env.Program(
     ],
 )
 env.Install(os.path.join(Dir('#').abspath, 'install/server'), [server])
+
+server_tests = env.Program(
+    target='server_tests',
+    source=[
+        'server_tests.cpp',
+    ],
+)
