--- a/native/SConscript
+++ b/native/SConscript
@@ -65,7 +65,7 @@ def MakeCommonNativeEnv(arch_name):
     env.Append(CPPPATH=[os.path.join(boost_install_directory, 'boost', 'include')])
     env.Append(LIBPATH=[
         os.path.join(boost_install_directory, 'boost', 'lib'),
-        native_env.Dir(arch['arch'])
+        native_env.Dir(os.path.join(arch['arch'], 'common'))
     ])
     env.Append(LIBS=['common', boost_library_names, 'pthread'])
     for (tool, name) in [
@@ -74,7 +74,8 @@ def MakeCommonNativeEnv(arch_name):
         env[tool] = arch['prefix'] + name
 
     # Build the common library
-    common = SConscript('common/SConscript', variant_dir=arch['arch'], exports='env', duplicate=0)
+    common = SConscript('common/SConscript', variant_dir=os.path.join(arch['arch'], 'common'),
+                        exports='env', duplicate=1)
     return env
 
 
