Cleanup the client/server startup and shutdown code

--- a/native/server/SConscript
+++ b/native/server/SConscript
@@ -31,6 +31,6 @@ env.Install(os.path.join(Dir('#').abspath, 'install/server'), [server])
 server_tests = env.Program(
     target='server_tests',
     source=[
-        'server_tests.cpp',
+        'server_tests_main.cpp',
     ],
 )
