Create the control plane Service class
... and move most of the client/server startup logic in there

--- a/control/client/SConscript
+++ b/control/client/SConscript
@@ -21,6 +21,6 @@ Import('control_env')
 env = control_env.Clone()
 
 files_to_install = list(
-    map(lambda f: env.File(f), ['start.py', 'config.cfg', 'configure_client.py']))
+    map(lambda f: env.File(f), ['start.py', 'client.cfg', 'configure_client.py']))
 
 Return('files_to_install')
