--- a/native/SConscript
+++ b/native/SConscript
@@ -19,7 +19,7 @@ import os
 
 Import('env')
 native_env = env.Clone()
-native_env.Append(CPPPATH=[native_env.Dir('.').abspath])
+native_env.Append(CPPPATH=[native_env.Dir('.').srcnode()])
 native_env.Append(CXXFLAGS=['-std=c++14'])
 native_env.Append(CPPDEFINES=['BOOST_FILESYSTEM_NO_DEPRECATED'])
 
@@ -62,10 +62,12 @@ def MakeCommonNativeEnv(arch_name):
 
     # Common environment configuration
     env = native_env.Clone()
-    env.Append(CPPPATH=[os.path.join(boost_install_directory, 'boost', 'include')])
+    env.Append(CPPPATH=[native_env.Dir(os.path.join(boost_install_directory, 'boost', 'include'))])
     env.Append(LIBPATH=[
         os.path.join(boost_install_directory, 'boost', 'lib'),
     ])
+    env.Append(LIBS=['pthread'])
+
     for (tool, name) in [
         ('CXX', 'g++'),
     ]:
@@ -74,7 +76,7 @@ def MakeCommonNativeEnv(arch_name):
     # Build the common library
     common = SConscript('common/SConscript', variant_dir=os.path.join(arch['arch'], 'common'),
                         exports='env', duplicate=0)
-    env.Append(LIBS=[common, boost, 'pthread'])
+    env.Append(LIBS=[common, boost])
     return env
 
 
