--- a/native/test/SConscript
+++ b/native/test/SConscript
@@ -1,4 +1,4 @@
-# Copyright 2020 Kaloian Manassiev
+# Copyright 2021 Kaloian Manassiev
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
 # associated documentation files (the "Software"), to deal in the Software without restriction,
@@ -15,22 +15,10 @@
 # DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-Import('env')
+Import('test_env')
+env = test_env.Clone()
 
-common = env.Library(
-    target='common',
-    source=[
-        'base.cpp',
-        'commands_server.cpp',
-        'context_base.cpp',
-        'exception.cpp',
-        'file_descriptor.cpp',
-        'ip_parsers.cpp',
-        'socket_producer_consumer.cpp',
-        'tun_ctl.cpp',
-        'tunnel_frame.cpp',
-        'tunnel_producer_consumer.cpp',
-    ],
-)
-
-Return('common')
+env.Program(target='test', source=[
+    'common_test.cpp',
+    'test_main.cpp',
+])
