--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,15 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "Attach to gdbserver on Parallels",
+            "type": "gdb",
+            "request": "attach",
+            "executable": "${workspaceFolder}/install/server/server",
+            "target": "ubuntu-20.04.shared:20000",
+            "remote": true,
+            "cwd": "${workspaceFolder}/install/server",
         }
     ]
 }
