--- a/native/SConscript
+++ b/native/SConscript
@@ -27,12 +27,11 @@ native_env.Append(CPPDEFINES=['BOOST_FILESYSTEM_NO_DEPRECATED'])
 architectures = native_env['ARCHITECTURES']
 
 client_architecture = native_env['CLIENT_ARCH']
-drivers_architecture = 'pi'
 server_architecture = native_env['SERVER_ARCH']
 tests_architecture = 'pc'
 
 print(
-    f'Native architectures: Client {client_architecture}, Drivers {drivers_architecture}, Server {server_architecture}, Tests {tests_architecture}'
+    f'Native architectures: Client {client_architecture}, Server {server_architecture}, Tests {tests_architecture}'
 )
 
 
@@ -142,10 +141,6 @@ class CommonNativeEnvironment:
 # Build the Client
 env = CommonNativeEnvironment.get(client_architecture)
 SConscript('client/SConscript', exports='env', duplicate=0)
-
-# Build the Drivers
-env = CommonNativeEnvironment.get(drivers_architecture)
-SConscript('drivers/SConscript', exports='env', duplicate=0)
 
 # Build the Server
 env = CommonNativeEnvironment.get(server_architecture)
