--- a/control/client/SConscript
+++ b/control/client/SConscript
@@ -21,6 +21,10 @@ Import('control_env')
 env = control_env.Clone()
 
 files_to_install = list(
-    map(lambda f: env.File(f), ['start.py', 'client.cfg', 'configure_client.py']))
+    map(lambda f: env.File(f), [
+        'client.cfg',
+        'configure_client.py',
+        'start.py',
+    ]))
 
 Return('files_to_install')
